spostatre immagini nella cartella corretta

--- a/PianoDiProgetto/sections/descrizione.tex
+++ b/PianoDiProgetto/sections/descrizione.tex
@@ -3,7 +3,7 @@
 \subsubsection[UC0: Scenario principale]{UC0: Scenario principale}
 \begin{figure}[H]
   \begin{center}
-\includegraphics[width=0.60\textwidth]{../template/img/UC0_ScenarioPrincipale.png}
+\includegraphics[width=0.60\textwidth]{img/UC0_ScenarioPrincipale.png}
 \caption{UC0: Scenario principale}
 \label{fig:UC0}
 \end{center}
@@ -26,7 +26,7 @@
 \subsubsection[UC4: Modifica indirizzi mail da sincronizzare]{UC4: Modifica indirizzi mail da sincronizzare}
 \begin{figure}[H]
   \begin{center}
-\includegraphics[width=0.60\textwidth]{../template/img/UC4_ModificaIndirizziMailDaSincronizzare.png}
+\includegraphics[width=0.60\textwidth]{img/UC4_ModificaIndirizziMailDaSincronizzare.png}
 \caption{UC4: Modifica indirizzi mail da sincronizzare}
 \label{fig:UC4}
 \end{center}
@@ -46,7 +46,7 @@
 \subsubsection[UC5: Modifiche DB]{UC5: Modifiche DB}
 \begin{figure}[H]
   \begin{center}
-\includegraphics[width=0.60\textwidth]{../template/img/UC5_ModificheDB.png}
+\includegraphics[width=0.60\textwidth]{img/UC5_ModificheDB.png}
 \caption{UC5: Modifiche DB}
 \label{fig:UC5}
 \end{center}
