Commentato pacchetto floatflt

--- a/template/structure.tex
+++ b/template/structure.tex
@@ -43,7 +43,7 @@
 \usepackage{wallpaper}
 \usepackage{grffile}
 \usepackage{soul}
-\usepackage{floatflt}
+%\usepackage{floatflt}
 \usepackage{pgf}
 
 %scalegraphics
