--- a/template/config.tex
+++ b/template/config.tex
@@ -1,12 +1,16 @@
 %Variabili globali
-\def\GRUPPO			{Nome Gruppo}
+\def\GRUPPO			{$M^5$}
 \def\INDIRIZZO		{indirizzo}
+
 \def\PROGETTO		{Sviluppo di un sistema informatico per la gestione dei contenuti non strutturati presenti in newsletter inviate via e-mail}
 \def\SIGLA			{ECM-1.0}
 
+\def\NOMEPROGETTO	{\textit{MailToYou}}
+\def\SIGLAPROGETTO	{M2U}
+
 \def\COMMITTENTE	{Prof. Ghiraldo Filippo}
 
-\def\EMAIL			{email}
+\def\EMAIL			{malla5.sgp@gmail.com}
 
 
 \def\LOGO			{../template/img/logo.png}
