correzione indice aspetto marketing

--- a/PianoDiProgetto/sections/marketing.tex
+++ b/PianoDiProgetto/sections/marketing.tex
@@ -1,12 +1,12 @@
-\subsection{Target}
+\subsubsection{Target}
 Il segmento di mercato al quale \NOMEPROGETTO{} si rivolge è costituito dalla nicchia di mercato rappresentata da un utenza business, la quale ha la necessità di catalogare con precisione e senza perdite di tempo, le numerose newsletter che quotidianamente giungono alla casella di posta elettronica.\\
 Nello specifico si vogliono raggiungere i \emph{liberi professionisti} quali avvocati, architetti, ingegneri, ma anche \emph{imprenditori} di PMI che spesso gestiscono personalmente un account di posta.\\
 Tutti questi soggetti hanno la necessità di gestire con efficienza le email ma spesso non hanno il tempo necessario per farlo in modo efficace: \NOMEPROGETTO{} riesce a colmare esattamente questa lacuna rendendo ogni operazione intuitiva ed immediata.
 
-\subsection{Competitors}
+\subsubsection{Competitors}
 Per approfondire la conoscenza del mercato dei software di gestione delle email si è resa necessaria una ricerca approfondita dei possibili competitors presenti nel panorama internazionale, in modo da comprendere al meglio i pregi e i difetti di tali soluzioni per poter implementare caratteristiche innovative e peculiarità uniche tali da rendere \NOMEPROGETTO{} un prodotto unico nel suo genere.
 
-\subsubsection{G-lock Email Processor} 
+\paragraph{G-lock Email Processor} 
 \url{http://www.glocksoft.com/email-processor}
 
 \begin{figure}[H]
@@ -37,7 +37,7 @@ Il software è in grado di:
 Il software si presenta come la migliore soluzione trovata sul mercato ma possiede alcuni importanti difetti: è compatibile solamente per la piattaforma Microsoft Windows, il quale ricopre un'ampia fetta di mercato ma non la totalità, e il prezzo è considerevolmente alto per una singola licenza, 295 USD.
 \newpage
 
-\subsubsection{Email2db}
+\paragraph{Email2db}
 \url{http://www.email2db.com/email-to-database.aspx}
 
 \begin{figure}[H]
@@ -63,5 +63,9 @@ Inoltre tutte le edizioni non hanno restrizioni sul tipo di messaggi che possono
 Anche per questo software sorge lo stesso problema del precedente in quando è utilizzabile solo su piattaforme Windows 7/8, Vista, XP, 2003 Server, 2008 Server, 2012 Server.\\
 Il software è a pagamento con un costo a partire da 475\euro per l'edizione Small Business, 995\euro per quella Enterprise, 475\euro per quella Developer e 3195\euro per la Data Center Edition, ma permette una prova gratuita di 30 giorni dopo essersi registrati.
 
-\subsection{Valore aggiunto}
+\subsubsection{Valore aggiunto}
 Dall'analisi dei competitors è emerso come non esista sul mercato un software \emph{multipiattaforma} che soddisfi i bisogni riscontrati nel capitolato; questa è una notevole mancanza in quanto non esiste solo il mondo Microsoft, anzi il mercato dei sistemi operativi sta andando incontro a notevoli cambiamenti, soprattutto con l'avvento dei terminali mobile e di Android; risulta evidente come non basta più coprire la fetta maggiore di pubblico, ma è necessario rendere il prodotto fruibile alla maggior parte delle persone e dei dispositivi.
+
+\subsubsection{Distribuzione prodotto}
+
+\subsubsection{Promozione prodotto}
