Aggiunto WBS Primo Livello

--- a/PianoDiProgetto/sections/pianificazione.tex
+++ b/PianoDiProgetto/sections/pianificazione.tex
@@ -1,7 +1,54 @@
 \subsection{Work Breakdown Structure}
 \input{sections/wbs}
+La Work BreakDown Structure, d’ora in poi WBS, rappresenta l’insieme delle attività
+necessarie a svolgere un compito ben preciso o un processo. Le singole attività prendono
+il nome di Work Package, WP, e definiscono dettagliatamente le azioni da svolgere per
+ciascuna di esse.
+La WBS è costituita da una struttura ad albero di WP che, a partire dell’obiettivo finale
+del progetto, specifica per suddivisioni successive i singoli sotto-obiettivi, fino all’unità
+minima di attività.
+Tale scomposizione in tanti compiti di dimensioni limitate facilita la gestione, il controllo
+e l’assegnazione delle singole attività, consentendo una migliore suddivisione del lavoro.
+Grazie alla WBS il project manager può, in maniera semplificata, organizzare tutte le
+attività che compongono il progetto, così come i WP, ed avere sempre a disposizione un
+utile strumento che definisce tutti i passi necessari alla buona realizzazione del proget-
+to. La WBS, inoltre, risulta essere la base per tutte le altre attività di pianificazione
+richieste per la realizzazione di un progetto di successo.
 
 \subsection{Organizational Breakdown Structure}
+\subsection{WBS-Primo Livello}
+\subsubsection{Definizione Concept}
+
+È la prima fase del progetto, dove si raccolgono le idee per portare alla nascita e alla definizione del progetto. A partire da questo momento in poi si penserà alla forma che assumerà il prodotto finale, alla  definizione delle caratteristiche più importanti( target del prodotto, come si intende erogare il servizio) e alla definizione delle funzionalità principali che il prodotto finale deve avere. 
+
+
+ \subsubsection{Studio Fattibilità }
+
+È la fase successiva a quella di Definizione Concept, ha lo scopo di capire se quello che si vuole realizzare è innanzitutto fattibile e possa portare ad avere dei guadagni concreti. Dunque il concept viene valutato sotto tutti i punti di vista e di interesse per l’organizzazione, al fine di avere un insieme di conclusioni e indicazioni sulle possibilità di buona riuscita del lavoro.
+
+ \subsubsection{Analisi e Progettazione}
+
+A questo punto gli obiettivi del progetto sono chiari, bisogna dunque formalizzarli e chiarirli in maniera non ambigua. 
+Vengono illustrate dettagliatamente le funzionalità, i servizi e le prestazioni che dovranno essere offerte dal prodotto finito. 
+Infine viene progettato come il prodotto soddisferà i requisiti definiti in precedenza, definendone la struttura ed architettura da assumere e rispettare.
+
+ \subsubsection{Sviluppo }
+
+In questa fase si passa alla creazione vera e propria del prodotto software mediante la codifica di quanto definito durante la progettazione. Perchè questo risulti possibile è essenziale che ogni membro si attenga strettamente a quanto descritto nei documenti che gli vengono forniti. Non deve, assolutamente, inserire della creatività personale, in quanto il suo compito consiste nella traduzione in codice di quanto deciso precedentemente.
+Il codice prodotto dovrà essere costantemente verificato, per avere la sicurezza e la certezza che rispetti i requisiti di qualità definiti nella fase di pianificazione, accompagnato dall’appropriata manualistica.
+
+ \subsubsection{Testing SW} 
+
+Arrivati a questo punto vengono dunque effettuati i test delle componenti prodotte, verificando come si relazionano tra di loro, a partire dalle componenti di base del prodotto per arrivare a testare, alla fine, il
+sistema completo.
+Inoltre viene verificato che quanto è stato prodotto sia conforme agli obiettivi e ai requisiti che si erano definiti in precedenza.
+
+ \subsubsection{Pubblicazione} 
+
+Una volta che il software prodotto è terminato e rispetta gli obiettivi ed i requisiti, viene ideato un piano per il rilascio. Viene definito come la società intende promuovere il proprio prodotto e la ricerca di
+eventuali partnership.
+
+
 \input{sections/obs}
 
 \subsection{Resource Breakdown Structure}
