aggiornato aspetto marketing

--- a/PianoDiProgetto/sections/marketing.tex
+++ b/PianoDiProgetto/sections/marketing.tex
@@ -2,6 +2,16 @@
 Il segmento di mercato al quale \NOMEPROGETTO{} si rivolge è costituito dalla nicchia di mercato rappresentata da un utenza business, la quale ha la necessità di catalogare con precisione e senza perdite di tempo, le numerose newsletter che quotidianamente giungono alla casella di posta elettronica.\\
 Nello specifico si vogliono raggiungere i \emph{liberi professionisti} quali avvocati, architetti, ingegneri, ma anche \emph{imprenditori} di PMI che spesso gestiscono personalmente un account di posta.\\
 Tutti questi soggetti hanno la necessità di gestire con efficienza le email ma spesso non hanno il tempo necessario per farlo in modo efficace: \NOMEPROGETTO{} riesce a colmare esattamente questa lacuna rendendo ogni operazione intuitiva ed immediata.
+Si possono quindi delineare 3 segmenti di target diversi che riscontrano problematiche simili ma con soluzioni leggermente diverse:
+\begin{description}
+\item[Liberi professionisti:] segmento a cui appartengono le più svariate categorie di lavoratori freelance; tra questi si possono trovare architetti, ingegneri, commercialisti, medici, avvocati, consulenti in diversi ambiti.\footnote{\url{http://it.wikipedia.org/wiki/Libero\_professionista}}\\
+Questi sono persone che lavorano in autonomia e devono gestire personalmente la posta in arrivo, sia che essa sia di clienti, sia che riguardi newsletter a cui il professionista è iscritto. Probabilmente un singolo lavoratore possiede più indirizzi email e questo contribuisce a complicare ulteriormente la gestione corretta della posta.\\
+Questo segmento è quindi interessato ad un prodotto di semplice utilizzo, efficiente ed affidabile e capace di gestire diversi account di posta anche in mobilità.
+\item[Studi privati:] questo segmento identifica professionisti che, diversamente dalla categoria precedente, hanno aperto uno studio nel quale lavorano a stretto contatto con un ristretto numero di soci e dipendenti\footnote{\url{http://it.wikipedia.org/wiki/Piccola\_e\_media\_impresa}}; appare evidente come la presenza di più persone con i relativi contatti email personali, stia ad indicare una maggiore necessità di controllo del traffico della posta, in quanto i volumi saranno maggiori rispetto ad un singolo utente.\\
+Di conseguenza il prodotto più adatto per questa categoria deve essere in grado di fornire una gestione centralizzata degli account e dei servizi di condivisione delle informazioni.\\
+\item[PMI:] le piccole e medie imprese presentano caratteristiche ancora diverse dalle 2 categorie precedenti, in primo luogo perché hanno una struttura organizzativa aziendale con una netta divisione dei compiti; la visione della posta sarà quindi una mansione affidata a determinate categorie di dipendenti i quali possono non essere direttamente interessati alle newsletter in entrata: appare quindi fondamentale che i diretti interessati possano avere modo di accedere a tali informazioni in modo agevole e completo.\\
+Il prodotto software deve essere quindi in grado di gestire un database di discrete dimensioni accedibile da più persone anche contemporaneamente, deve quindi avere doti di robustezza e affidabilità notevoli, nonchè reattivo alle richieste che vengono effettuate.
+\end{description}
 
 \subsubsection{Competitors}
 Per approfondire la conoscenza del mercato dei software di gestione delle email si è resa necessaria una ricerca approfondita dei possibili competitors presenti nel panorama internazionale, in modo da comprendere al meglio i pregi e i difetti di tali soluzioni per poter implementare caratteristiche innovative e peculiarità uniche tali da rendere \NOMEPROGETTO{} un prodotto unico nel suo genere.
