Inserimento seconda parte WBS secondo livello

--- a/PianoDiProgetto/sections/pianificazione.tex
+++ b/PianoDiProgetto/sections/pianificazione.tex
@@ -94,7 +94,6 @@ ad alto livello necessari a sviluppare l’abstract di base.\\
 \textbf{Output:} documento formale che descrive una prima versione di specifica del prodotto,
 nella quale è si definisce dettagliatamente l’idea che si vuole realizzare.\\
 \linebreak
-
 \textbf{Attività:}
 \begin{itemize}
 \item ricerca nel web di eventuali competitor per ricavare da progetti già esistenti, quali
@@ -129,7 +128,6 @@ sviluppare
 \item formalizzazione del documento
 \item approvazione
 \end{itemize}
-
 \textbf{Costo:}  \euro \\
 \textbf{Tempi di realizzazione:}  giorni lavorativi\\
 
@@ -152,7 +150,6 @@ sviluppare
 \item formalizzazione documento
 \item approvazione
 \end{itemize}
-
 \textbf{Costo:} \euro \\
 \textbf{Tempi di realizzazione:}  giorni lavorativi
 
@@ -196,7 +193,6 @@ il rilascio del prodotto\\
 \linebreak
 \textbf{Attività}
 \begin{itemize}
-
 \item analisi di mercato
 \item interviste, sondaggi e dialoghi con possibili clienti
 \item individuazione di eventuali strategie
@@ -293,6 +289,296 @@ durante le varie fasi di sviluppo del progetto\\
 \textbf{Costo:} \euro \\
 \textbf{Tempi di realizzazione:}  giorni lavorativi
 
+\subsubsection{Definizione dei casi d'uso}
+\textbf{Descrizione:}fase di definizione finale delle funzionalità del prodotto. Si determina
+in modo non ambiguo quali saranno le caratteristiche del software e come gli utenti
+potranno interagire con esso. Successivamente si effettua un’analisi dei rischi sul piano dello sviluppo
+del software, si studia e si definiscono quali sono i rischi nei quali si
+può incombere durante tutte la fasi di sviluppo, così da poterli evitare o quantomenogestire\\
+\linebreak
+\textbf{Responsabile:} \\
+\linebreak
+\textbf{Input: }documentazione prodotta nei WP precedenti ed esperienza personale degli
+analisti\\
+\linebreak
+\textbf{Output:} documento formale che illustra chiaramente ed in modo formale le funzionalità
+definitive del prodotto finale e come sarà possibile per gli utenti interagire con esso\\
+\linebreak
+\textbf{Attività:}
+\begin{itemize}
+\item studio dei documenti in input
+\item riunione fra gli analisti
+\item ricerca di soluzioni a problemi emersi durante l’incontro
+\item prima stesura documento riassuntivo
+\item verifica documento ed eventuali correzioni
+\item formalizzazione documento
+\item approvazione
+\end{itemize}
+
+\textbf{Costo:} \euro \\
+\textbf{Tempi di realizzazione:}  giorni lavorativi
+
+
+
+\subsubsection{Definizione dei requisiti}
+
+\textbf{Descrizione:} fase non elementare, composta da altri WP di livello inferiore, allo scopo di definire i requisiti che il prodotto deve possedere e soddisfare\\
+\linebreak
+\textbf{Responsabile:} \\
+\linebreak
+\textbf{Input:} documentazione prodotta nei WP precedenti ed esperienza personale degli
+analisti\\
+\linebreak
+\textbf{Output:} documento formale ad uso esterno Analisi dei Requisiti\\
+\linebreak
+\textbf{Attività:}
+\begin{itemize}
+\item studio dei documenti in input
+\item riunione fra analisti
+\item prima stesura documento riassuntivo
+\item verifica documento ed eventuali correzioni
+\item formalizzazione documento
+\item approvazione
+\end{itemize}
+\textbf{Costo:} \euro \\
+\textbf{Tempi di realizzazione:}  giorni lavorativi
+
+
+\subsubsection{Pianificazione qualità del prodotto}
+
+\textbf{Descrizione:} fase di identificazione e definizione degli standard da seguire allo scopo di garan-
+tire qualità al prodotto. Identificazione delle strategie di controllo da utilizzare per
+aggiungere qualità al prodotto\\
+\linebreak
+\textbf{Responsabile:}  \\
+\linebreak
+\textbf{Input:} politiche e standard di qualità, esperienze passate degli analisti
+\textbf{Output:} documenti formali, Piano di Qualifica e Norme di Progetto, che illustrano gli
+standard e le strategie da seguire per aggiungere qualità al prodotto\\
+\linebreak
+\textbf{Attività:}
+\begin{itemize}
+\item studio degli standard esistenti
+\item definizione degli obiettivi di qualità
+\item pianificazione adattamento standard al progetto
+\item definizione delle strategie di verifica e validazione del software
+\item definizione delle norme di progetto
+\item prima stesura documenti riassuntivi
+\item verifica documenti ed eventuali correzioni
+\item formalizzazione documenti
+\item approvazione
+\end{itemize}
+\textbf{Costo:} \euro \\
+\textbf{Tempi di realizzazione:}  giorni lavorativi
+
+
+\subsubsection{Realizzazione e definizione del database}
+\textbf{Descrizione:} fase di sviluppo e codifica del database secondo quanto definito nella fase
+di progettazione\\
+\linebreak
+\textbf{Responsabile:} \\
+\linebreak
+\textbf{Input:} Analisi Requisiti, Specifica Tecnica, Definizione di Prodotto, Norme di Progetto,
+Piano di Qualifica ed altra documentazione tecnica\\
+\linebreak
+\textbf{Output:}database realizzato e pienamente funzionante
+\textbf{Attività:}
+\begin{itemize}
+\item studio dei documenti in input
+\item fase di codifica
+\item verifica del codice e delle funzionalità del database
+\item verifica della qualità
+\item approvazione
+\end{itemize}
+\textbf{Costo:} \euro \\
+\textbf{Tempi di realizzazione:}  giorni lavorativi
+
+
+
+\subsubsection{Realizzazione interfaccia applicazione}
+\textbf{Descrizione:} fase di sviluppo e codifica dell'interfaccia previste per il software, se-
+condo quanto definito nelle fasi di analisi e progettazione \\
+\linebreak
+\textbf{Responsabile:} \\
+\linebreak
+\textbf{Input:} Analisi Requisiti, Specifica Tecnica, Definizione di Prodotto, Norme di Proget-
+to, Piano di Qualifica ed altra documentazione tecnica \\
+\linebreak
+\textbf{Output:} interfaccia realizzata e pienamente funzionante\\
+\linebreak
+\textbf{Attività:}
+\begin{itemize}
+\item studio dei documenti in input
+\item fase di codifica
+\item verifica del codice
+\item verifica della qualità
+\item approvazione
+\end{itemize}
+\textbf{Costo:} \euro \\
+\textbf{Tempi di realizzazione:}  giorni lavorativi
+
+
+\subsubsection{Manuali Utente}
+\textbf{Descrizione:} realizzazione dei manuali utente per il supporto all’utente all'uso dell'interfaccia web. Il manuale illustra le funzionalità del prodotto, il suo utilizzo e l’esposizione con possibili soluzioni di problemi \\
+\linebreak
+\textbf{Responsabile:} \\
+\linebreak
+\textbf{Input:} interfaccia prodotto \\
+\linebreak
+\textbf{Output:} documento con lo scopo di fornire un supporto agli utenti dopo il rilascio\\
+\linebreak
+\textbf{Attività:}
+\begin{itemize}
+\item studio delle funzionalità del software
+\item prima realizzazione manuale
+\item verifica documento ed eventuali correzioni
+\item formalizzazione documento
+\item approvazione
+\end{itemize}
+\textbf{Costo:} \euro \\
+\textbf{Tempi di realizzazione:}  giorni lavorativi
+
+
+\subsubsection{Realizzazione documentazione database}
+\textbf{Descrizione:} stesura formale della documentazione riguardante tutto il codice prodotto
+per la realizzazione del database \\
+\linebreak
+\textbf{Responsabile:} \\
+\linebreak
+\textbf{Input:} Specifica Tecnica, Definizione di Prodotto e codice software del database \\
+\linebreak
+\textbf{Output:} documento con scopo documentale della codifica del software \\
+\linebreak
+\textbf{Attività:}
+\begin{itemize}
+\item studio documenti in input e del codice prodotto
+\item stesura documentazione per ogni singola unità
+\item verifica documento ed eventuali correzioni
+\item formalizzazione documento
+\item approvazione
+\end{itemize}
+\textbf{Costo:} \euro \\
+\textbf{Tempi di realizzazione:}  giorni lavorativi
+
+
+\subsubsection{Documentazione interfaccia web}
+\textbf{Descrizione:} stesura formale della documentazione riguardante tutto il codice prodotto
+per la realizzazione del interfaccia \\
+\linebreak
+\textbf{Responsabile:} \\
+\linebreak
+\textbf{Input:} Specifica Tecnica, Definizione di Prodotto e codice software del interfaccia web\\
+\linebreak
+\textbf{Output:} documento con scopo documentale della codifica del software\\
+\linebreak
+\textbf{Attività:}
+\begin{itemize}
+\item studio documenti in input e del codice prodotto
+\item stesura documentazione per ogni singola unità
+\item verifica documento ed eventuali correzioni
+\item formalizzazione documento
+\item approvazione
+\end{itemize}
+\textbf{Costo:} \euro \\
+\textbf{Tempi di realizzazione:}  giorni lavorativi
+
+
+\subsubsection{Test unità}
+
+\textbf{Descrizione:} fase di test di tutte le singole unità software prodotte \\
+\linebreak
+\textbf{Responsabile:} \\
+\linebreak
+\textbf{Input:} interfaccia web e Piano di Qualifica\\
+\linebreak
+\textbf{Output:} documento riassuntivo dei risultati ottenuti dai test\\
+\linebreak
+\textbf{Attività:}
+\begin{itemize}
+\item studio documento in input
+\item esecuzione dei test
+\item risoluzione eventuali errori rilevati
+\item approvazione dei test
+\item stesura documento riassuntivo
+\item verifica documento
+\item formalizzazione documento
+\item approvazione
+\end{itemize}
+\textbf{Costo:} \euro \\
+\textbf{Tempi di realizzazione:}  giorni lavorativi
+
+
+\subsubsection{Test intero sistema}
+\textbf{Descrizione:} fase di test sulle interazioni fra le singole unità. Si verifica che i comportamenti in seguito alle comunicazioni fra di queste siano quelli previsti \\
+\linebreak
+\textbf{Responsabile:} \\
+\linebreak
+\textbf{Input:} interfaccia web e Piano di Qualifica, documento riassuntivo test di unità \\
+\linebreak
+\textbf{Output:} documento riassuntivo dei risultati ottenuti dai test di integrazione \\
+\linebreak
+\textbf{Attività:}
+\begin{itemize}
+\item studio documento Piano di Qualifica e accertamento risultati test di unità
+\item esecuzione dei test
+\item risoluzione eventuali errori rilevati
+\item approvazione dei test
+\item stesura documento riassuntivo
+\item verifica documento
+\item formalizzazione documento
+\item approvazione
+\end{itemize}
+\textbf{Costo:} \euro \\
+\textbf{Tempi di realizzazione:}  giorni lavorativi
+
+
+
+
+
+\subsubsection{Collaudo}
+
+\textbf{Descrizione:} fase di test dell’intero sistema da effettuare prima del rilascio. Si cercano
+eventuali errori o malfunzionamenti e successivamente si certifica che tutte le funzionalità dichiarate siano presenti \\
+\linebreak
+\textbf{Responsabile:} \\
+\linebreak
+\textbf{Input:} interfaccia web, esito dei vari test, Piano di Qualifica e Analisi Dei Requisiti \\
+\linebreak
+\textbf{Output:} documento riassuntivo dei risultati ottenuti dai test e dal controllo dei requisiti \\
+\linebreak
+\textbf{Attività:}
+\begin{itemize}
+\item studio documenti in input
+\item esecuzione di test di sistema previo utilizzo
+\item risoluzione eventuali errori rilevati
+\item approvazione dei test
+\item controllo dei requisiti soddisfatti
+\item stesura documento riassuntivo
+\item verifica documento
+\item formalizzazione documento
+\item approvazione
+\end{itemize}
+\textbf{Costo:} \euro \\
+\textbf{Tempi di realizzazione:}  giorni lavorativi
+
+
+ \subsubsection{Promozione del Prodotto}
+\textbf{Descrizione:} fase di promozione del prodotto realizzato. Si punta a pubblicizzare il
+prodotto con lo scopo di raggiungere quanti più clienti possibili iniziando a creare un brand \\
+\linebreak
+\textbf{Responsabile:} \\
+\linebreak
+\textbf{Input:} alcune conoscenze di marketing e target clienti \\
+\linebreak
+\textbf{Output:} slogan, pubblicità scelte di mercato da intraprendere \\
+\linebreak
+\textbf{Attività:}
+\begin{itemize}
+\item ricerca possibili clienti
+\item pubblicità rivolta alla categorie di clienti scelti
+\end{itemize}
+\textbf{Costo:} \euro \\
+\textbf{Tempi di realizzazione:}  giorni lavorativi
 
 \subsection{Organizational Breakdown Structure}
 \input{sections/obs}
